--- a/Business/Host/Business.Host.csproj
+++ b/Business/Host/Business.Host.csproj
@@ -160,6 +160,10 @@
       <Project>{37c92161-45c9-481b-90a1-821007185720}</Project>
       <Name>Business.Achievements</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Business.Common\Business.Common.csproj">
+      <Project>{e4e9bf7a-cb57-484d-aa0c-ef6a4c6c5077}</Project>
+      <Name>Business.Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Challenges\Business.Challenges.csproj">
       <Project>{532F5E1B-117C-4131-A9A7-8B96B3CEE237}</Project>
       <Name>Business.Challenges</Name>
