--- a/Business/Host/Web.config
+++ b/Business/Host/Web.config
@@ -76,23 +76,16 @@
       </serviceActivations>
     </serviceHostingEnvironment>
     <services>
-      <service name="Business.Challenges.ChallengesService" behaviorConfiguration="DefaultServiceBehaviour">
+      <service name="Business.Challenges.ChallengesService">
         <endpoint address="" binding="basicHttpBinding" contract="Business.Challenges.IChallengesService" />
       </service>
-      <service name="Business.Identity.IdentityService" behaviorConfiguration="DefaultServiceBehaviour">
+      <service name="Business.Identity.IdentityService">
         <endpoint address="" binding="basicHttpBinding" contract="Business.Identity.IIdentityService" />
       </service>
-      <service name="Business.Achievements.AchievementsService" behaviorConfiguration="DefaultServiceBehaviour">
+      <service name="Business.Achievements.AchievementsService">
         <endpoint address="" binding="basicHttpBinding" contract="Business.Achievements.IAchievementsService" />
       </service>
     </services>
-    <behaviors>
-      <serviceBehaviors>
-        <behavior name="DefaultServiceBehaviour">
-          <serviceDebug includeExceptionDetailInFaults="true" />
-        </behavior>
-      </serviceBehaviors>
-    </behaviors>
   </system.serviceModel>
   <system.codedom>
     <compilers>
