--- a/Business/Identity/Business.Identity.csproj
+++ b/Business/Identity/Business.Identity.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\IdentityRole.cs" />
     <Compile Include="ViewModels\IdentityUser.cs" />
+    <Compile Include="ViewModels\UserModel.cs" />
     <Compile Include="ViewModels\UserTopViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -73,6 +74,10 @@
     <ProjectReference Include="..\..\Shared\Framework\Shared.Framework.csproj">
       <Project>{150EBD2E-0220-4E95-A42E-A5E14E0DB467}</Project>
       <Name>Shared.Framework</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Business.Common\Business.Common.csproj">
+      <Project>{E4E9BF7A-CB57-484D-AA0C-EF6A4C6C5077}</Project>
+      <Name>Business.Common</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
