--- a/Presentation/Web/package.json
+++ b/Presentation/Web/package.json
@@ -1,35 +1,34 @@
 {
   "name": "challenging-challenges",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "dependencies": {
-    "@angular/common": "2.4.6",
-    "@angular/compiler": "2.4.6",
-    "@angular/core": "2.4.6",
-    "@angular/forms": "2.4.6",
-    "@angular/http": "2.4.6",
-    "@angular/platform-browser": "2.4.6",
-    "@angular/platform-browser-dynamic": "2.4.6",
-    "@angular/platform-server": "2.4.6",
-    "@angular/router": "3.4.6",
-    "@angular2-mdl-ext/popover": "^0.5.0",
-    "@angular2-mdl-ext/select": "^0.8.2",
+    "@angular-mdl/core": "^4.0.0",
+    "@angular-mdl/popover": "^0.6.0",
+    "@angular-mdl/select": "^0.10.1",
+    "@angular/animations": "^4.0.0",
+    "@angular/common": "^4.0.0",
+    "@angular/compiler": "^4.0.0",
+    "@angular/core": "^4.0.0",
+    "@angular/forms": "^4.0.0",
+    "@angular/http": "^4.0.0",
+    "@angular/platform-browser": "^4.0.0",
+    "@angular/platform-browser-dynamic": "^4.0.0",
+    "@angular/platform-server": "^4.0.0",
+    "@angular/router": "^4.0.0",
     "@types/node": "^6.0.42",
     "angular-l10n": "^2.0.3",
     "angular-tag-cloud-module": "0.0.4",
     "angular2-jwt": "0.1.28",
-    "angular2-mdl": "^2.13.0",
     "angular2-notifications": "^0.4.53",
-    "angular2-platform-node": "~2.0.11",
     "angular2-router-loader": "0.3.4",
     "angular2-template-loader": "^0.6.0",
-    "angular2-universal": "~2.0.11",
-    "angular2-universal-patch": "^0.2.1",
     "angular2-universal-polyfills": "~2.0.11",
     "aspnet-prerendering": "^2.0.0",
     "aspnet-webpack": "^1.0.17",
     "awesome-typescript-loader": "3.0.0-beta.18 || ^3.0.0",
     "brace": "^0.10.0",
     "copy-webpack-plugin": "^4.0.1",
+    "core-js": "^2.4.1",
     "css": "^2.2.1",
     "css-loader": "^0.25.0",
     "es6-shim": "^0.35.1",
@@ -44,18 +43,29 @@
     "jquery-knob": "^1.2.11",
     "json-loader": "^0.5.4",
     "marked": "^0.3.6",
-    "ng2-pagination": "^2.0.0",
+    "ng2-ace-editor": "0.1.9",
+    "ng2-tag-input": "^1.0.5",
+    "ngx-pagination": "3.0.0",
     "preboot": "^4.5.2",
     "raw-loader": "^0.5.1",
-    "rxjs": "5.1.0",
+    "rxjs": "5.3.0",
     "simplemde": "^1.11.2",
     "style-loader": "^0.13.1",
     "to-string-loader": "^1.1.5",
     "typescript": "^2.0.3",
     "url-loader": "^0.5.7",
-    "webpack": "^2.2.1",
+    "webpack": "2.4.1",
     "webpack-hot-middleware": "^2.12.2",
     "webpack-merge": "^0.14.1",
-    "zone.js": "0.7.6"
+    "zone.js": "0.8.9"
+  },
+  "peerDependencies": {
+    "@angular/common": "^4.0.0",
+    "@angular/core": "^4.0.0",
+    "@angular/forms": "^4.0.0",
+    "rxjs": "5.3.0"
+  },
+  "devDependencies": {
+    "reflect-metadata": "^0.1.10"
   }
 }
