--- a/.gitignore
+++ b/.gitignore
@@ -254,3 +254,7 @@ ModelManifest.xml
 # Publish settings
 /Business/Host/Properties/PublishProfiles
 /Presentation/Web/Properties/PublishProfiles
+
+#Non-TS files
+*.js
+*.js.map
